Fri Feb 12 12:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Headers/AppKit/NSView.h: Added missing method declarations for
	display methods.
	* Source/NSView.m: Rewrote all the display methods to the current spec
	(I hope).

Thu Feb 11 14:10:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Coordinate fixes by Benhur to -
	* Source/NSClipView.m: Coordinate fixes by Benhur
	* Source/NSColor.m: Retain things properly when decoding.
	* Source/NSMatrix.m: Matrix coordinate system is flipped.
	* Source/NSScroller.m: Coordinate fixes

Wed Feb 10 12:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSClipView.m:  Tidy flip-view errors by Benhur
	* Source/NSText.m: Lock focus around drawing insertion point while
	becoming/resiging first responder.

Wed Feb 10 10:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCell.m: ([-copyWithZone:]) Fixed memory leak - was copying
	AND retaining contents.
	
Tue Feb  9 12:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
	
	* Source/NSView.m: Various tidyups suggested by Benhur
	* Source/PSMatrix.m: ([-rectInMatrixSpace:]) and ([-sizeInMatrixSpace:])
	fixed for negative values.
	* Source/NSScrollView.m: Resize code fix.

Fri Feb  5 19:46:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSView.m: Coordinate conversion fixe by
	Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSClipView.m: turn copy-on-scroll off by defualt until it's
	working properly.
	* Headers/.../NSView.h: Fixed superview methods

Fri Feb  5  6:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScroller.m: ([-knobRect:]) Correctd code so that the knob
	doesn't jump if you  click on it.

Thu Feb  4 18:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSScroller.m: More fixes by Benhur-de-Oliveira.Stein@imag.fr
	* Source/NSClipView.m: ditto
