@@ -1,3 +1,7 @@
+Fri Feb 12 13:37:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSCell.m: Fixes to draw text using NSText (by Benhur)
+
 Fri Feb 12 12:56:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Headers/AppKit/NSView.h: Added missing method declarations for
